syntax = "proto3";

package empresas;

message Empresa {
   string id = 1;
   string nome = 2;
   string cnpj = 3;
   string createdAt = 4;
   string updatedAt = 5;
}

message EmpresaUpdate {
  string id = 1;
  string nome = 2;
  string cnpj = 3;
  string jwt = 4;
}

message NewEmpresa {
   string nome = 1;
   string cnpj = 2;
   string jwt = 3;
}


message EmpresaReq {
   string id = 1;
   string jwt = 3;
}

message Void {}

service EmpresaService {
    rpc CreateEmpresa(NewEmpresa) returns (Empresa) {};
    rpc GetEmpresa (EmpresaReq) returns (Empresa) {};
    rpc RemoveEmpresa (EmpresaReq) returns (Empresa) {};
    rpc UpdateEmpresa (EmpresaUpdate) returns (Void) {};
}